[workspace]
members = ["whisper", "t5", "llama", "trocr", "common"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.79"
candle-core = { version = "0.3.3", features = ["cuda", "cudarc", "cudnn"] }
candle-nn = "0.3.3"
candle-kernels = { version = "0.3.3" }
candle-transformers = { version = "0.3.3", features = ["cuda"] }
clap = { version = "4.4.18", features = ["derive"] }
cudarc = { version = "0.10" }
hf-hub = { version = "0.3.2", features = ["tokio"] }
safetensors = "0.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokenizers = { version = "0.15", features = ["onig"] }
tracing-chrome = "0.7.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
