[package]
name = "llama"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true, features = ["cuda", "cudarc", "cudnn"] }
candle-nn = { workspace = true }
candle-transformers = { workspace = true, features = ["cuda"] }
clap = { workspace = true, features = ["derive"] }
hf-hub = { workspace = true }
common = { path = "../common" }
tokenizers = { workspace = true, features = ["onig"] }
tracing-chrome = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
