[package]
name = "t5"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
candle-core = { workspace = true, features = ["cuda", "cudarc", "cudnn"] }
candle-nn = { workspace = true }
candle-transformers = { workspace = true, features = ["cuda"] }
common = { path = "../common" }
hf-hub = { workspace = true, features = ["tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokenizers = { workspace = true, features = ["onig"] }
tracing-chrome = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
