[package]
name = "whisper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
byteorder = "1.5.0"
candle-core = { workspace = true, features = ["cuda", "cudarc", "cudnn"] }
candle-nn = { workspace = true }
candle-transformers = { workspace = true, features = ["cuda"] }
clap = { workspace = true, features = ["derive"] }
hf-hub = { workspace = true }
console = "0.15.8"
indicatif = "0.17.7"
rand = { workspace = true }
rayon = "1.8.1"
tempfile = "3.9.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wav = "1.0.0"
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true, features = ["onig"] }
tracing-chrome = { workspace = true }
common = { path = "../common" }
chrono = "0.4.32"
